src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>CPQ_ARR_Per_Product__c</fullName>
        <formula>CPQ_Opportunity_TCV__c   * ( CPQ_Distribution__c / 100 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the ARR Amount for this Opportunity Product. (Total Contract Value x Distribution %)</inlineHelpText>
        <label>ARR Per Product</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_DWP_Adjustment_Total__c</fullName>
        <formula>SBQQ__QuoteLine__r.CPQ_DWP_Adjustment_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DWP Adjustment Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Distribution__c</fullName>
        <formula>SBQQ__QuoteLine__r.CPQ_Distribution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the List Amount of this Opportunity Product as a percent of the Total Amount of the related Opportunity.</inlineHelpText>
        <label>Distribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPQ_Opportunity_Product_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>By default, this will be the same as the Owner of the Primary Quote and Quote Line that originated this Opportunity Product.</inlineHelpText>
        <label>Opportunity Product Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_Opportunity_TCV__c</fullName>
        <formula>Opportunity.CPQ_Total_Contract_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Uplift_Amount__c</fullName>
        <label>Uplift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_1_ARR_Amount__c</fullName>
        <formula>SBQQ__QuoteLine__r.CPQ_Year_1_ARR_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 1 License ARR Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_1_Deal_Maintenance_ARR_Amount__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__Quote__r.Year_1_Support_ARR_Amount_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 1 Deal Maintenance ARR Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_1_Distr_Maintenance_ARR_Amount__c</fullName>
        <formula>CPQ_Year_1_Deal_Maintenance_ARR_Amount__c *  CPQ_Distribution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 1 Deal Distr Maintenance ARR Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_1_Maintenance_ARR_Amount__c</fullName>
        <formula>SBQQ__QuoteLine__r.CPQ_Year_1_Maintenance_ARR_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 1 Maintenance ARR Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_2_ARR_Amount__c</fullName>
        <formula>SBQQ__QuoteLine__r.CPQ_Year_2_ARR_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 2 License ARR Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_2_Deal_Maintenance_ARR_Amount__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__Quote__r.Year_2_Support_ARR_Amount_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 2 Deal Maintenance ARR Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_2_Distr_Maintenance_ARR_Amount__c</fullName>
        <formula>CPQ_Year_2_Deal_Maintenance_ARR_Amount__c * CPQ_Distribution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 2 Deal Distr Maintenance ARR Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_2_Maintenance_ARR_Amount__c</fullName>
        <formula>SBQQ__QuoteLine__r.CPQ_Year_2_Maintenance_ARR_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 2 Maintenance ARR Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_3_ARR_Amount__c</fullName>
        <formula>SBQQ__QuoteLine__r.CPQ_Year_3_ARR_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 3 License ARR Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_3_Deal_Maintenance_ARR_Amount__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__Quote__r.Year_3_Support_ARR_Amount_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 3 Deal Maintenance ARR Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_3_Distr_Maintenance_ARR_Amount__c</fullName>
        <formula>CPQ_Year_3_Deal_Maintenance_ARR_Amount__c * SBQQ__QuoteLine__r.CPQ_Distribution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 3 Deal Distr Maintenance ARR Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_3_Maintenance_ARR_Amount__c</fullName>
        <formula>SBQQ__QuoteLine__r.CPQ_Year_3_Maintenance_ARR_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 3 Maintenance ARR Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Converted_to_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted to Asset?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <formula>Opportunity.Renewal_Date__c</formula>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Sharing_Rate2__c</fullName>
        <label>Revenue Sharing Rate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__ParentID__c</fullName>
        <inlineHelpText>ID of the opportunity product that came from this product&apos;s bundle.</inlineHelpText>
        <label>Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this Opportunity Product.</description>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>OpportunityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Uplift_Amount_New__c</fullName>
        <formula>SBQQ__QuoteLine__r.CPQ_Uplift_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Uplift Amount New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Added_To_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this was previously added to a project during the create project process. If checked it will not be picked up in the next create project</description>
        <label>Added To Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__IsServicesProductLine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsServicesProductLine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>